--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 Elegant Events. All rights reserved.</p>
+      <p>&copy; 2025 @Debby's Decor. All rights reserved.</p>
     </footer>
 
     <script>
