--- a/booking.html
+++ b/booking.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Booking - Elegant Events</title>
+    <title>Booking - Debby's Decor</title>
     <link rel="stylesheet" href="pages.css" />
   </head>
   <body>
     <header>
-      <h1>Elegant Events</h1>
+      <h1>Debby's Decor</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 Elegant Events. All rights reserved.</p>
+      <p>&copy; 2025 @Debby's Decor. All rights reserved.</p>
     </footer>
 
     <script>
