--- a/testimonials.html
+++ b/testimonials.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Elegant Events</h1>
+      <h1>Debby's Decor</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -22,7 +22,7 @@
       <h2>Client Testimonials</h2>
       <div class="testimonial">
         <p>
-          "Elegant Events made our wedding magical. Every detail was perfect!"
+          "Debby's Decor made our wedding magical. Every detail was perfect!"
         </p>
         <span>– Alessia & Luca</span>
       </div>
@@ -39,7 +39,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 Elegant Events. All rights reserved.</p>
+      <p>&copy; 2025 @Debby's Decor. All rights reserved.</p>
     </footer>
 
     <script>
